[package]
name = "paqus-node"
version = "0.1.2"
edition = "2024"

[dependencies]
axum = "0.7"
borsh = { version = "1.6", features = ["derive"] }
hex = "0.4"
libp2p = { version = "0.56", features = ["gossipsub", "identify", "json", "macros", "noise", "ping", "request-response", "tcp", "tokio", "yamux"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lmdb = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
paqus = "0.1.6"
